--- a/algorithm/algorithm/algorithm.vcxproj.filters
+++ b/algorithm/algorithm/algorithm.vcxproj.filters
@@ -447,5 +447,11 @@
     <ClCompile Include="14889.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="1613.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="2251.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
