--- a/algorithm/algorithm/algorithm.vcxproj.filters
+++ b/algorithm/algorithm/algorithm.vcxproj.filters
@@ -453,5 +453,14 @@
     <ClCompile Include="2251.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="7662.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="7662_1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="1074_1.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
